# audio-repair-node

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  implementation-callback.md  implementation_plan-v2.md  implementation_plan-v3.md  implementation_plan.md  pyproject.toml
configs/: repair_config.json
src/audio_repair/: __init__.py  __main__.py  cli.py  config.py  types.py
src/audio_repair/core/: audio_loader.py  stft_compute.py  vocal_activity_detector.py
src/audio_repair/detection/: distortion_detector.py  feature_extractor.py  harsh_detector.py
src/audio_repair/pipeline/: analyzer.py  repair_router.py  segment_merger.py
tests/: conftest.py  test_analyzer_e2e.py  test_audio_loader.py  test_distortion_detector.py  test_feature_extractor.py  test_harsh_detector.py  test_repair_router.py  test_segment_merger.py  test_stft_compute.py  test_vocal_activity_detector.py
